# vending

./: .gitignore  README.md  package.json
esp32frontend/libraries/: lv_conf.h
esp32frontend/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Approve.c  ui_Get_Info.c  ui_RFID.c  ui_Reject.c  ui_Select.c  ui_Splash.c  ui_Tikla.c  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_small_label.c  ui_comp_small_label.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_fezalogo2_png.c  ui_img_pattern_png.c  ui_img_universal_contactless_card_symbol1_png.c
esp32frontend/ui/: ui.ino
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CartItem.tsx  Navbar.tsx  ShoppingCart.tsx  StoreItem.tsx  footer.tsx
frontend/src/data/: items.json
frontend/src/pages/: About.tsx  Home.tsx  PopupStyles.css  Store.tsx
güvenilir-kurum-frontend/: package-lock.json  package.json
güvenilir-kurum-frontend/backend/src/access/: login.ts
güvenilir-kurum-frontend/backend/src/credentials/: verifySubmittedCredential.ts
güvenilir-kurum-frontend/frontend/public/: index.html
güvenilir-kurum-frontend/frontend/src/: App.tsx
güvenilir-kurum-frontend/frontend/src/api/: triggerLogin.ts
güvenilir-kurum-frontend/frontend/src/components/: Logo.module.css  Logo.tsx  User.tsx
güvenilir-kurum-frontend/frontend/src/components/steps/: ChooseExtension.tsx  EnableExtensions.tsx  StartSession.tsx  (+1 more)
rest-api/: app.ts  package.json  tsconfig.json
rest-api/utils/: verify.ts
smartcontract/: contract.sol
